--- a/front/html/product.html
+++ b/front/html/product.html
@@ -46,8 +46,8 @@
       <div class="limitedWidthBlock">
         <section class="item">
           <article>
-            <div class="item__img">
-              <!-- <img src="../images/logo.png" alt="Photographie d'un canapé"> -->
+            <div class="item__img" id="item_img">
+
             </div>
             <div class="item__content">
 
@@ -110,6 +110,6 @@
         </div>
       </div>
     </footer>
-  <script src="../js/product.js"></script>
+  <script src="../../js/products.js"></script>
   </body>
 </html>
