--- a/front/html/index.html
+++ b/front/html/index.html
@@ -88,6 +88,6 @@
       </div>
     </footer>
   <!-- <script src="../js/script.js"></script> -->
-  <script src="../../js/index.js"></script>
+  <script src="../js/index.js"></script>
   </body>
 </html>
