--- a/front/html/product.html
+++ b/front/html/product.html
@@ -46,7 +46,7 @@
       <div class="limitedWidthBlock">
         <section class="item">
           <article>
-            <div class="item__img" id="item_img">
+            <div class="item__img" id="item__img">
 
             </div>
             <div class="item__content">
@@ -63,8 +63,8 @@
 
               <div class="item__content__settings">
                 <div class="item__content__settings__color">
-                  <label for="color-select">Choisir une couleur :</label>
-                  <select name="color-select" id="colors">
+                  <label for="colors">Choisir une couleur :</label>
+                  <select name="colors" id="colors">
                       <option value="default" selected disabled>--SVP, choisissez une couleur --</option>
 <!--                       <option value="vert">vert</option>
                       <option value="blanc">blanc</option> -->
@@ -72,8 +72,8 @@
                 </div>
 
                 <div class="item__content__settings__quantity">
-                  <label for="itemQuantity">Nombre d'article(s) (1-100) :</label>
-                  <input type="number" name="itemQuantity" min="1" max="100" value="0" id="quantity">
+                  <label for="quantity">Nombre d'article(s) (1-100) :</label>
+                  <input type="number" name="quantity" min="1" max="100" value="1" id="quantity">
                 </div>
               </div>
 
