Add Function to display the user basket in the basket.html page

--- a/front/html/cart.html
+++ b/front/html/cart.html
@@ -48,6 +48,11 @@
           <h1>Votre panier</h1>
           <section class="cart">
             <section id="cart__items">
+
+
+
+
+              <!-- SECTION A DUPPLIQUER POUR CHAQUE PRODUIT
               <article class="cart__item" data-id="{product-ID}" data-color="{product-color}">
                 <div class="cart__item__img">
                   <img src="../images/product01.jpg" alt="Photographie d'un canapé">
@@ -69,6 +74,12 @@
                   </div>
                 </div>
               </article>
+              ----------------------------------------- -->
+
+
+
+
+
             </section>
             <div class="cart__price">
               <p>Total (<span id="totalQuantity"><!-- 2 --></span> articles) : <span id="totalPrice"><!-- 84,00 --></span> €</p>
@@ -133,7 +144,7 @@
         </div>
       </div>
     </footer>
-  <script src="../js/cart.js"></script>
+  <script src="../js/cart.js" type="module"></script>
   
   </body>
 </html>
